removing courier from formatting entire site

--- a/flaskblog/templates/home.html
+++ b/flaskblog/templates/home.html
@@ -9,12 +9,13 @@
 
 {% block content %}
 <br>
-<h1>Welcome!</h1>
+<h1 class="display-3">Welcome!</h1>
 <br>
-<div class="jumbotron">
+<br>
+<div class="jumbotron vertical-center">
     <div class="col-sm-8 mx-auto">
         <h1 class="text-center">About me</h1>
-        <p>I'm currently looking for my next career opportunity as a software engineer. I have a Bachelor's degree in
+        <p class="lead">I'm currently looking for my next career opportunity as a software engineer. I have a Bachelor's degree in
             Computer Science from Wichita State University. I am interested in any kind of programming work: front end,
              back end, full stack, non web-development work, et cetera; As long as it affords me the opportunity to 
              continue learning and growing. I love working on challenging problems and trying to find innovative solutions.
