adding a margin to put space between jumbotron and welcome message

--- a/flaskblog/templates/home.html
+++ b/flaskblog/templates/home.html
@@ -9,10 +9,10 @@
 
 {% block content %}
 <br>
-<h1 class="display-3">Welcome!</h1>
+<h1 class="display-3 mb-5">Welcome!</h1>
 <br>
 <br>
-<div class="jumbotron vertical-center">
+<div class="jumbotron mt-5">
     <div class="col-sm-8 mx-auto">
         <h1 class="text-center">About me</h1>
         <p class="lead">I'm currently looking for my next career opportunity as a software engineer. I have a Bachelor's degree in
