--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -44,6 +44,9 @@
                         <a class="nav-link" href="{{url_for('account')}}">Account</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{{url_for('newPost')}}">New Post</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{{url_for('logout')}}">Logout</a>
                     </li>
                 {% else %}
