--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -19,27 +19,24 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-dark bg-dark">
-        <a class="navbar-brand" href="/">Dakota Erickson</a>
-        {% if current_user.is_authenticated %}
-        <div class="navbar-brand"> Hi {{current_user.username }}!</div>
-        {% endif %}
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample01"
-            aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <a class="navbar-brand" href="{{url_for('home') }}">Dakota Erickson</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarsExample01">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/resume">Resume</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/posts">Posts</a>
-                </li>
-                {% if current_user.is_authenticated %}
+  
+        <div class="collapse navbar-collapse" id="navbarsExample04">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="{{url_for('home') }}">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{url_for('resume') }}">Resume</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/posts">Posts</a>
+            </li>
+            {% if current_user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{url_for('account')}}">Account</a>
                     </li>
@@ -57,18 +54,17 @@
                         <a class="nav-link" href="{{url_for('register')}}">Register</a>
                     </li>
                 {% endif %}
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">Contact Me</a>
-                    <div class="dropdown-menu" aria-labelledby="dropdown01">
-                        <a class="dropdown-item" value="Email"
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Contact Me</a>
+              <div class="dropdown-menu" aria-labelledby="dropdown04">
+                <a class="dropdown-item" href="https://www.linkedin.com/in/dakota-erickson">Linkedin</a>
+                <a class="dropdown-item" value="Email"
                             href='mailto:derickson@gmail.com?subject=Message for Dakota Erickson'>Email</a>
-                        <a class="dropdown-item" href="https://www.linkedin.com/in/dakota-erickson">Linkedin</a>
-                    </div>
-                </li>
-            </ul>
+              </div>
+            </li>
+          </ul>
         </div>
-    </nav>
+      </nav>
     <div class="container">
         {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
