--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -8,8 +8,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <!-- custom css -->
     <link rel="stylesheet" href="../static/css/main.css">
-
 
     {% if title %}
     <title>Flask Blog - {{ title }}</title>
@@ -18,63 +18,66 @@
     {% endif %}
 </head>
 
-<body>
+<body class="body">
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <a class="navbar-brand" href="{{url_for('home') }}">Dakota Erickson</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04"
+            aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
         </button>
-  
+
         <div class="collapse navbar-collapse" id="navbarsExample04">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="{{url_for('home') }}">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{{url_for('resume') }}">Resume</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/posts">Posts</a>
-            </li>
-            {% if current_user.is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{url_for('account')}}">Account</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{url_for('newPost')}}">New Post</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{url_for('logout')}}">Logout</a>
-                    </li>
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="{{url_for('home') }}">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{url_for('resume') }}">Resume</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/posts">Posts</a>
+                </li>
+                {% if current_user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{{url_for('account')}}">Account</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{url_for('newPost')}}">New Post</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{url_for('logout')}}">Logout</a>
+                </li>
                 {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{url_for('login')}}">Log In</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{url_for('register')}}">Register</a>
-                    </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{url_for('login')}}">Log In</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{url_for('register')}}">Register</a>
+                </li>
                 {% endif %}
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Contact Me</a>
-              <div class="dropdown-menu" aria-labelledby="dropdown04">
-                <a class="dropdown-item" href="https://www.linkedin.com/in/dakota-erickson">Linkedin</a>
-                <a class="dropdown-item" value="Email"
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown04" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">Contact Me</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown04">
+                        <a class="dropdown-item" href="https://www.linkedin.com/in/dakota-erickson">Linkedin</a>
+                        <a class="dropdown-item" value="Email"
                             href='mailto:derickson@gmail.com?subject=Message for Dakota Erickson'>Email</a>
-              </div>
-            </li>
-          </ul>
+                    </div>
+                </li>
+            </ul>
         </div>
-      </nav>
+    </nav>
     <div class="container">
         {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-                {% for category, message in messages %}
-                    <div class="alert alert-{{ category }} mt-3">
-                        {{ message }}
-                    </div>
-                {% endfor %}
-            {% endif %}
+        {% if messages %}
+        {% for category, message in messages %}
+        <div class="alert alert-{{ category }} mt-3">
+            {{ message }}
+        </div>
+        {% endfor %}
+        {% endif %}
         {% endwith %}
+        <br>
         {% block content %} {% endblock %}
     </div>
 
