--- a/flaskblog/templates/home.html
+++ b/flaskblog/templates/home.html
@@ -9,9 +9,9 @@
 <div class="row">
     <div class="col-md-8 blog-main">
         <div class="blog-post">
-            <div class="jumbotron jumbotron-background text-black pt-5">
+            <div class="jumbotron jumbotron-background text-white pt-5">
                 <div class="media-body">
-                    <h1 class="text-center">About Me</h1>
+                    <h1 class="text-center about-me">About Me</h1>
                     <p class="lead">I'm currently looking for my next career opportunity as a software engineer. I have
                         a Bachelor's degree in
                         Computer Science from Wichita State University. I am interested in any kind of programming work:
