--- a/flaskblog/templates/newPost.html
+++ b/flaskblog/templates/newPost.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-<div class="text-white">
+<div class="text-white"">
     <form method='POST' action="">
         {{ form.hidden_tag()}}
         <fieldset class="form-group">
