--- a/flaskblog/templates/post.html
+++ b/flaskblog/templates/post.html
@@ -11,8 +11,8 @@
                 <small>{{ post.datePosted.strftime('%Y-%m-%d') }}</small>
                 {% if post.author == current_user %}
                 <div class="mt-2 mb-3">
-                    <a class="btn btn-secondary btn-sm m-1" href="{{ url_for('edit', postId=post.id)}}">Edit</a>
-                    <button type="button" class="btn btn-danger btn-sm m-1" data-toggle="modal"
+                    <a class="btn btn-outline-light btn-sm m-1" href="{{ url_for('edit', postId=post.id)}}">Edit</a>
+                    <button type="button" class="btn btn-outline-danger btn-sm m-1" data-toggle="modal"
                         data-target="#deleteModal">Delete</button>
                 </div>
                 {% endif %}
