--- a/flaskblog/templates/posts.html
+++ b/flaskblog/templates/posts.html
@@ -1,13 +1,13 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-<div>
+<div class="text-white lead">
     {% for post in posts.items %}
     <article class="media content-section jumbotron-background">
         <img class="rounded-circle article-image" src="{{ url_for('static', filename='profilePics/' + post.author.imageFile) }}">
       <div class="media-body ml-3 mr-3">
         <div class="article-metadata">
-          <a class="mr-2"  href="#">{{ post.author.username }}</a>
+          <a class="mr-2 text-white"  href="#">{{ post.author.username }}</a>
           <small class="text-muted">{{ post.datePosted.strftime('%Y-%m-%d') }}</small>
         </div>
         <h2><a class ="article-title" href="{{ url_for('post', postId=post.id) }}">{{ post.title }}</a></h2>
