--- a/flaskblog/templates/resume.html
+++ b/flaskblog/templates/resume.html
@@ -1,19 +1,19 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-<div class="text-white lead">
+<div class="text-white">
     <h1 class="text-center">Dakota Erickson</h1>
     <p class="text-center">derickson29@gmail.com | linkedin.com/in/dakota-erickson</p>
     <h4 class="text-center mb-0">SOFTWARE ENGINEER</h4>
-    <p class="text-center">Proven ability to apply software engineering principles and experience in new and familiar
+    <p class="text-center lead">Proven ability to apply software engineering principles and experience in new and familiar
         domains</p>
     <br>
     <h4 class="text-center mb-0">CORE COMPETENCIES</h4>
-    <p class="text-center">Problem solving, Data Structures & Algorithms, Version Control, Strong Communication Skills</p>
+    <p class="text-center lead">Problem solving, Data Structures & Algorithms, Version Control, Strong Communication Skills</p>
     <hr class="resume-rule">
     <br>
     <h5>TECHNOLOGIES:</h5>
-    <p>
+    <p class="lead">
         Python, Angular, Typescript, Javascript, C++, Git, Linux, HTML/CSS, Docker
     </p>
     <hr class="resume-rule">
