--- a/flaskblog/templates/home.html
+++ b/flaskblog/templates/home.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <br>
-<h1 class="display-3 mb-5 text-white">Welcome!</h1>
+<h1 class="display-3 text-white">Welcome!</h1>
 <br>
 <br>
 <div class="row">
@@ -12,39 +12,38 @@
             <div class="jumbotron jumbotron-background text-white pt-5">
                 <div class="media-body">
                     <h1 class="text-center about-me">About Me</h1>
-                    <p class="lead">I'm currently looking for my next career opportunity as a software engineer. I have
+                    <p class="about-me-blurb">I'm currently looking for my next career opportunity as a software
+                        engineer.<br> I have
                         a Bachelor's degree in
-                        Computer Science from Wichita State University. I am interested in any kind of programming work:
-                        front end,
-                        back end, full stack, non web-development work, et cetera; As long as it affords me the
-                        opportunity to
-                        continue learning and growing. I love working on challenging problems and trying to find
-                        innovative solutions.
-                        I currently live in Wichita, Kansas, but I am open to relocating to the right
-                        palce for the right job. I am also open to working 100% remote as I have done for the past year.
-                        Currently
-                        the locations I am interested in are the Seattle, Portland, and Denver metro areas. Please feel
-                        free to view my resume
-                        and contact me if you feel like you've got a position I would be a good fit for.
+                        Computer Science from Wichita State University.<br> I am interested in any kind of programming
+                        work that allows me to continue learning and growing:
+                        front end, back end, full stack, non web-development work, et cetera. I embrace challenging
+                        problems and search for innovative solutions.
+                        I currently live in Wichita, Kansas, but I am interested in relocating to the right
+                        place for the right job. I am also open to working 100% remotely as I have done for the past
+                        year.
+                        Currently,
+                        the locations I am considering are the Seattle, Portland, and Denver metro areas. I look forward
+                        to hearing from you if you have a position I would be a good fit for.
                     </p>
-                    <p class=""> -Dakota Erickson</p>
+                    <p> -Dakota Erickson</p>
                 </div>
             </div>
         </div><!-- /.blog-post -->
     </div><!-- /.blog-main -->
 
     <aside class="col-md-4 blog-sidebar">
-        <div class="p-4 mb-2 bg-light rounded city-box text-white lead">
+        <div class="p-4 mb-2 bg-light rounded city-box text-white">
             <h4 class="city-name">Seattle</h4>
             <p class="mb-0">A blurb about why I'm consdidering Seattle.</p>
             <div> A tie into a weather API to display the current temp in the destination city</div>
         </div>
-        <div class="p-4 mb-2 rounded city-box text-white lead">
+        <div class="p-4 mb-2 rounded city-box text-white">
             <h4 class="city-name">Portland</h4>
             <p class="mb-0">A blurb about why I'm consdidering Portland.</p>
             <div> A tie into a weather API to display the current temp in the destination city</div>
         </div>
-        <div class="p-4 mb-2 rounded city-box text-white lead">
+        <div class="p-4 mb-2 rounded city-box text-white">
             <h4 class="city-name">Denver</h4>
             <p class="mb-0">A blurb about why I'm consdidering Denver.</p>
             <div> A tie into a weather API to display the current temp in the destination city</div>
