--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -19,7 +19,7 @@
 </head>
 
 <body class="body">
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
         <a class="navbar-brand" href="{{url_for('home') }}">Dakota Erickson</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04"
             aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
@@ -67,11 +67,12 @@
             </ul>
         </div>
     </nav>
-    <div class="container">
+    <div class="container mt-5">
         {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
         {% for category, message in messages %}
-        <div class="alert alert-{{ category }} mt-3">
+        <br>
+        <div class="alert alert-{{ category }}">
             {{ message }}
         </div>
         {% endfor %}
