--- a/flaskblog/templates/posts.html
+++ b/flaskblog/templates/posts.html
@@ -7,10 +7,10 @@
         <img class="rounded-circle article-image" src="{{ url_for('static', filename='profilePics/' + post.author.imageFile) }}">
       <div class="media-body ml-3 mr-3">
         <div class="article-metadata">
-          <a class="mr-2 text-white"  href="#">{{ post.author.username }}</a>
+          <a class="mr-2 article-title"  href="#">{{ post.author.username }}</a>
           <small class="text-muted">{{ post.datePosted.strftime('%Y-%m-%d') }}</small>
         </div>
-        <h2><a class ="article-title" href="{{ url_for('post', postId=post.id) }}">{{ post.title }}</a></h2>
+        <h2 class="article-title"><a class = "text-white"href="{{ url_for('post', postId=post.id) }}">{{ post.title }}</a></h2>
         <p class="article-content">{{ post.content }}</p>
       </div>
     </article>
