--- a/flaskblog/static/css/main.css
+++ b/flaskblog/static/css/main.css
@@ -35,7 +35,7 @@
 
 .content-section {
   padding: 10px 20px;
-  border: 1px solid white;
+  border: 1px solid #94b9af;
   border-radius: 3px;
   margin-bottom: 20px;
 }
@@ -49,7 +49,7 @@
 .article-metadata {
   padding-bottom: 1px;
   margin-bottom: 4px;
-  border-bottom: 1px solid #e3e3e3
+  border-bottom: 1px solid #94b9af
 }
 
 .article-metadata a:hover {
