--- a/flaskblog/templates/account.html
+++ b/flaskblog/templates/account.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-<div class="content-section text-white">
+<div class="content-section text-white jumbotron-background">
     <div class="media mb-3">
         <img src="{{ imageFile }}" class="rounded-circle account-img">
         <div class="media-body ml-3">
