--- a/flaskblog/templates/login.html
+++ b/flaskblog/templates/login.html
@@ -41,14 +41,14 @@
         <div class="form-group">
             {{ form.submit(class="btn btn-outline-light") }}
         </div>
-        <small class="text-muted ml-2">
-            <a href="#">Forgot Password?</a>
+        <small class="text-muted ml-2 article-title">
+            <a href="#" class="text-white">Forgot Password?</a>
         </small>
     </form>
 </div>
 <div class="border-top pt-3">
-    <small class="text-muted">
-        Need An Account? <a class="ml-2" href="{{url_for('register')}}">Register</a>
+    <small class="text-muted article-title">
+        Need An Account? <a class="ml-2 text-white" href="{{url_for('register')}}">Register</a>
     </small>
 </div>
 {% endblock content %}
