--- a/flaskblog/templates/register.html
+++ b/flaskblog/templates/register.html
@@ -66,8 +66,8 @@
         </form>
     </div>
     <div class="border-top pt-3">
-        <small class="text-muted">
-            Already have an Account? <a class="ml-2" href="{{url_for('login')}}">Sign In</a>
+        <small class="text-muted article-title">
+            Already have an Account? <a class="ml-2 text-white" href="{{url_for('login')}}">Sign In</a>
         </small>
     </div>
 {% endblock content %}
