--- a/flaskblog/templates/resume.html
+++ b/flaskblog/templates/resume.html
@@ -5,71 +5,70 @@
     <h1 class="text-center">Dakota Erickson</h1>
     <p class="text-center">derickson29@gmail.com | linkedin.com/in/dakota-erickson</p>
     <h4 class="text-center mb-0">SOFTWARE ENGINEER</h4>
-    <p class="text-center lead">Proven ability to apply software engineering principles and experience in new and familiar
+    <p class="text-center lead">Proven ability to apply software engineering principles and experience in new and
+        familiar
         domains</p>
     <br>
     <h4 class="text-center mb-0">CORE COMPETENCIES</h4>
-    <p class="text-center lead">Problem solving, Data Structures & Algorithms, Version Control, Strong Communication Skills</p>
+    <p class="text-center lead">Problem solving, Data Structures & Algorithms, Version Control, Strong Communication
+        Skills</p>
     <hr class="resume-rule">
-    <br>
     <h5>TECHNOLOGIES:</h5>
-    <p class="lead">
-        Python, Angular, Typescript, Javascript, C++, Git, Linux, HTML/CSS, Docker
-    </p>
+    <div class=" content-section jumbotron-background pb-0 mb-0">
+        <p>
+            Python, Angular, Typescript, Javascript, C++, Git, Linux, HTML/CSS, Docker
+        </p>
+    </div>
     <hr class="resume-rule">
     <h5>WORK HISTORY:</h5>
-    <p>
-    <div style="display:inline">
-        <h7><strong>SOFTWARE ENGINEER</strong></h7>
-        <h7 class="float-right"><strong>NETAPP JUNE 2019 - OCTOBER 2020</strong></h7>
+    <div class=" content-section jumbotron-background pb-0 mb-0">
+        <p>
+            <h7><strong>SOFTWARE ENGINEER</strong></h7>
+            <h7 class="float-right"><strong>NETAPP JUNE 2019 - OCTOBER 2020</strong></h7>
+        <p>
+            <li>Refactored an inherited Python code base with hard coded values and paths to be more dynamic/modular,
+                making the
+                code base easier to work in for developers.</li>
+            <li>Created a micro service in Go that returned only the necessary information to replace an API call that
+                was slow
+                to return and had excessive information.</li>
+            <li>Implemented a UI component in Angular supporting a new underlying hardware configuration, allowing that
+                configuration to be offered to customers.</li>
+        </p>
     </div>
-    <p>
-        <li>Refactored an inherited Python code base with hard coded values and paths to be more dynamic/modular, making the
-            code base easier to work in for developers.</li>
-        <br>
-        <li>Created a micro service in Go that returned only the necessary information to replace an API call that was slow
-            to return and had excessive information.</li>
-        <br>
-        <li>Implemented a UI component in Angular supporting a new underlying hardware configuration, allowing that
-            configuration to be offered to customers.</li>
-        <br>
-    </p>
-    <hr class="resume-rule">
     <br>
-    <div style="display:inline">
+    <div class=" content-section jumbotron-background pb-0 mb-0">
         <h7><strong>SOFTWARE ENGINEER CONTRACTOR</strong></h7>
         <h7 class="float-right"><strong>ENNOVAR FOR NETAPP JULY 2018 - MAY 2019</strong></h7>
+        <p>
+            <li>Created a tool in Python that would collect/parse logs looking for specific hardware failure signatures
+                using
+                regex when the support team was having difficulty diagnosing hardware failures efficiently. This reduced
+                turnaround time for customers.</li>
+            <li>Devised and conducted a rollback test matrix to investigate which build versions were having issues,
+                enabling
+                the platform team to be confident in performing rollbacks.</li>
+            <li>Executed a kernel fuzzing software suite to test the OS and analyzed/reported any crashes.</li>
+        </p>
     </div>
-    <p>
-        <li>Created a tool in Python that would collect/parse logs looking for specific hardware failure signatures using
-            regex when the support team was having difficulty diagnosing hardware failures efficiently. This reduced
-            turnaround time for customers.</li>
-        <br>
-        <li>Devised and conducted a rollback test matrix to investigate which build versions were having issues, enabling
-            the platform team to be confident in performing rollbacks.</li>
-        <br>
-        <li>Executed a kernel fuzzing software suite to test the OS and analyzed/reported any crashes.</li>
-        <br>
-    </p>
-    <hr class="resume-rule">
-    <div style="display:inline">
+    <br>
+    <div class=" content-section jumbotron-background pb-0 mb-0">
         <h7><strong>TECHNICAL SUPPORT</strong></h7>
         <h7 class="float-right"><strong>ENNOVAR FOR TEXTRON JUNE 2017 - JULY 2018</strong></h7>
+        <p>
+            <li>Resolved hardware and software issues that were impeding employees’ work</li>
+            <li>Educated employees about how to avoid issues going forward so they could work efficiently</li>
+            <li>Trained six new team members about best practices and common issues, increasing the number of employees
+                we could
+                help per hour by 20%
+            </li>
+        </p>
     </div>
-    <p>
-        <li>Resolved hardware and software issues that were impeding employees’ work</li>
-        <br>
-        <li>Educated employees about how to avoid issues going forward so they could work efficiently</li>
-        <br>
-        <li>Trained six new team members about best practices and common issues, increasing the number of employees we could
-            help per hour by 20%
-        </li>
-        <br>
-    </p>
     <hr class="resume-rule">
     <h7><strong>EDUCATION</strong></h7>
-    <p>Bachelor of Science in Computer Science, Wichita State University</p>
-    </p>
+    <div class=" content-section jumbotron-background">
+        <p>Bachelor of Science in Computer Science, Wichita State University</p>
+    </div>
 </div>
 
 
