--- a/flaskblog/templates/home.html
+++ b/flaskblog/templates/home.html
@@ -3,13 +3,13 @@
 
 {% block content %}
 <br>
-<h1 class="display-3 text-white">Welcome!</h1>
+<h1 class="display-3 green-text">Welcome!</h1>
 <br>
 <br>
 <div class="row">
     <div class="col-md-8 blog-main">
         <div class="blog-post">
-            <div class="jumbotron jumbotron-background text-white pt-5">
+            <div class="jumbotron jumbotron-background content-section text-white pt-5 pb-5 pr-5 pl-5">
                 <div class="media-body">
                     <h1 class="text-center about-me">About Me</h1>
                     <p class="about-me-blurb">I'm currently looking for my next career opportunity as a software
