--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -20,7 +20,7 @@
 
 <body class="body">
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="{{url_for('home') }}">Dakota Erickson</a>
+        <a class="navbar-brand" href="{{url_for('main.home') }}">Dakota Erickson</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04"
             aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -29,30 +29,30 @@
         <div class="collapse navbar-collapse" id="navbarsExample04">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="{{url_for('home') }}">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{{url_for('main.home') }}">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{url_for('resume') }}">Resume</a>
+                    <a class="nav-link" href="{{url_for('main.resume') }}">Resume</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/posts">Posts</a>
                 </li>
                 {% if current_user.is_authenticated %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{{url_for('account')}}">Account</a>
+                    <a class="nav-link" href="{{url_for('users.account')}}">Account</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{url_for('newPost')}}">New Post</a>
+                    <a class="nav-link" href="{{url_for('posts.newPost')}}">New Post</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{url_for('logout')}}">Logout</a>
+                    <a class="nav-link" href="{{url_for('users.logout')}}">Logout</a>
                 </li>
                 {% else %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{{url_for('login')}}">Log In</a>
+                    <a class="nav-link" href="{{url_for('users.login')}}">Log In</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{url_for('register')}}">Register</a>
+                    <a class="nav-link" href="{{url_for('users.register')}}">Register</a>
                 </li>
                 {% endif %}
                 <li class="nav-item dropdown">
