--- a/flaskblog/templates/post.html
+++ b/flaskblog/templates/post.html
@@ -7,11 +7,11 @@
             src="{{ url_for('static', filename='profilePics/' + post.author.imageFile) }}">
         <div class="media-body mr-3 ml-3">
             <div class="article-metadata mb-3">
-                <a class="mr-2 article-title" href="#">{{ post.author.username }}</a>
+                <a class="mr-2 article-title" href="{{ url_for('users.userPosts', username=post.author.username)}}">{{ post.author.username }}</a>
                 <small>{{ post.datePosted.strftime('%Y-%m-%d') }}</small>
                 {% if post.author == current_user %}
                 <div class="mt-2 mb-3">
-                    <a class="btn btn-outline-light btn-sm m-1" href="{{ url_for('edit', postId=post.id)}}">Edit</a>
+                    <a class="btn btn-outline-light btn-sm m-1" href="{{ url_for('posts.edit', postId=post.id)}}">Edit</a>
                     <button type="button" class="btn btn-outline-danger btn-sm m-1" data-toggle="modal"
                         data-target="#deleteModal">Delete</button>
                 </div>
@@ -34,7 +34,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <form action="{{ url_for('deletePost', postId=post.id) }}" method="POST">
+                    <form action="{{ url_for('posts.deletePost', postId=post.id) }}" method="POST">
                         <input type="submit" class="btn btn-danger" value="Delete">
                     </form>
                 </div>
