--- a/flaskblog/templates/register.html
+++ b/flaskblog/templates/register.html
@@ -67,7 +67,7 @@
     </div>
     <div class="border-top pt-3">
         <small class="text-muted article-title">
-            Already have an Account? <a class="ml-2 text-white" href="{{url_for('login')}}">Sign In</a>
+            Already have an Account? <a class="ml-2 text-white" href="{{url_for('users.login')}}">Sign In</a>
         </small>
     </div>
 {% endblock content %}
