updating files so it works on prod server

--- a/flaskblog/templates/home.html
+++ b/flaskblog/templates/home.html
@@ -35,21 +35,21 @@
     <aside class="col-md-4 blog-sidebar">
         <div class="p-4 mb-2 bg-light rounded city-box text-white">
             <div>
-                <h4 class="city-name">Seattle <div class="float-right">{{ seattleTemp }}°F</div></h4>
+                <h4 class="city-name">Seattle</h4>
             </div>
             <p class="mb-0"> I've always been interested in living around Seattle. I think I would enjoy the environment and the flourishing tech industry is an added bonus.</p>
         </div>
         <div class="p-4 mb-2 rounded city-box text-white">
             <div>
-                <h4 class="city-name">Portland <div class="float-right">{{ portlandTemp }}°F</div></h4>
+                <h4 class="city-name">Portland</h4>
             </div>
-            <p class="mb-0">A blurb about why I'm consdidering Portland.</p>
+            <p class="mb-0">Portland is another city I'd be interested in relocating to. The environment is similarly appealing like Seattle, but Portland seems to have a more laid back attitude that's definitely appealing.</p>
         </div>
         <div class="p-4 mb-2 rounded city-box text-white">
             <div>
-                <h4 class="city-name">Denver <div class="float-right">{{ denverTemp }}°F</div></h4>
+                <h4 class="city-name">Denver</h4>
             </div>
-            <p class="mb-0">A blurb about why I'm consdidering Denver.</p>
+            <p class="mb-0">While I was growing up I always wanted to move to Denver. It's where my father is from so I've spent a lot of time there and I know I would love living there. Go Broncos.</p>
         </div>
     </aside><!-- /.blog-sidebar -->
 
