removing unused route and template and fixing capitalization

--- a/flaskblog/templates/resume.html
+++ b/flaskblog/templates/resume.html
@@ -10,7 +10,7 @@
         domains</p>
     <br>
     <h4 class="text-center mb-0">CORE COMPETENCIES</h4>
-    <p class="text-center lead">Problem solving, Data Structures & Algorithms, Version Control, Strong Communication
+    <p class="text-center lead">Problem Solving, Data Structures & Algorithms, Version Control, Strong Communication
         Skills</p>
     <hr class="resume-rule">
     <h5>TECHNOLOGIES:</h5>
