removing user registration/login/post functionality momentarily

--- a/flaskblog/templates/register.html
+++ b/flaskblog/templates/register.html
@@ -1,4 +1,4 @@
-{% extends 'layout.html' %}
+<!-- {% extends 'layout.html' %}
 
 {% block content %}
     <div class='content-section text-white form-background'>
@@ -70,4 +70,4 @@
             Already have an Account? <a class="ml-2 text-white" href="{{url_for('users.login')}}">Sign In</a>
         </small>
     </div>
-{% endblock content %}
+{% endblock content %} -->
