--- a/flaskblog/templates/post.html
+++ b/flaskblog/templates/post.html
@@ -1,4 +1,4 @@
-{% extends 'layout.html' %}
+<!-- {% extends 'layout.html' %}
 
 {% block content %}
 <div>
@@ -21,7 +21,6 @@
             <p class="article-content">{{ post.content }}</p>
         </div>
     </article>
-    <!-- Modal -->
     <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
@@ -42,4 +41,4 @@
         </div>
     </div>
 </div>
-{% endblock content %}
+{% endblock content %} -->
