--- a/flaskblog/templates/resetToken.html
+++ b/flaskblog/templates/resetToken.html
@@ -1,4 +1,4 @@
-{% extends 'layout.html' %}
+<!-- {% extends 'layout.html' %}
 
 {% block content %}
 <div class='content-section text-white form-background'>
@@ -40,4 +40,4 @@
         </div>
     </form>
 </div>
-{% endblock content %}
+{% endblock content %} -->
