removing navbar links

--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -34,10 +34,10 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{url_for('main.resume') }}">Resume</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" href="/posts">Posts</a>
-                </li>
-                {% if current_user.is_authenticated %}
+                </li> -->
+                <!-- {% if current_user.is_authenticated %}
                 <li class="nav-item">
                     <a class="nav-link" href="{{url_for('users.account')}}">Account</a>
                 </li>
@@ -54,7 +54,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{url_for('users.register')}}">Register</a>
                 </li>
-                {% endif %}
+                {% endif %} -->
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown04" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">Contact Me</a>
