updating home and layout

--- a/flaskblog/templates/home.html
+++ b/flaskblog/templates/home.html
@@ -12,7 +12,7 @@
             <div class="jumbotron jumbotron-background content-section text-white pt-5 pb-5 pr-5 pl-5">
                 <div class="media-body">
                     <h1 class="text-center about-me">About Me</h1>
-                    <p class="about-me-blurb">I'm currently looking for my next career opportunity as a software
+                    <p class="about-me-blurb">I'm actively looking for my next career opportunity as a software
                         engineer.<br> I have
                         a Bachelor's degree in
                         Computer Science from Wichita State University.<br> I am interested in any kind of programming
@@ -22,7 +22,7 @@
                         I currently live in Wichita, Kansas, but I am interested in relocating to the right
                         place for the right job. I am also open to working 100% remotely as I have done for the past
                         year.
-                        Currently,
+                        Presently,
                         the locations I am considering are the Seattle, Portland, and Denver metro areas. I look forward
                         to hearing from you if you have a position I would be a good fit for.
                     </p>
