adding user registration/login/post functionality back now that email recovery is sorted

--- a/flaskblog/templates/userPosts.html
+++ b/flaskblog/templates/userPosts.html
@@ -1,4 +1,4 @@
-<!-- {% extends 'layout.html' %}
+{% extends 'layout.html' %}
 
 {% block content %}
 <h1 class="text-white mb-3"> Posts by {{ user.username }} ({{ posts.total }})</h1>
@@ -28,4 +28,4 @@
     {% endif %}
 {% endfor %}
 </div>
-{% endblock content %} -->
+{% endblock content %}
