--- a/flaskblog/templates/account.html
+++ b/flaskblog/templates/account.html
@@ -1,4 +1,4 @@
-<!-- {% extends 'layout.html' %}
+{% extends 'layout.html' %}
 
 {% block content %}
 <div class="content-section text-white jumbotron-background">
@@ -55,4 +55,4 @@
         </div>
     </form>
 </div>
-{% endblock content %} -->
+{% endblock content %}
