--- a/flaskblog/templates/editPost.html
+++ b/flaskblog/templates/editPost.html
@@ -1,4 +1,4 @@
-<!-- {% extends 'layout.html' %}
+{% extends 'layout.html' %}
 
 {% block content %}
 <div class="content-section text-white form-background">
@@ -39,4 +39,4 @@
         </div>
     </form>
 </div>
-{% endblock content %} -->
+{% endblock content %}
