--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -34,6 +34,17 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{url_for('main.resume') }}">Resume</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{url_for('posts.allPosts') }}">Posts</a>
+                </li>
+                {% if current_user.is_authenticated %}
+                <a class="nav-item nav-link" href="{{ url_for('posts.newPost') }}">New Post</a>
+                <a class="nav-item nav-link" href="{{ url_for('users.account') }}">Account</a>
+                <a class="nav-item nav-link" href="{{ url_for('users.logout') }}">Logout</a>
+                {% else %}
+                <a class="nav-item nav-link" href="{{ url_for('users.login') }}">Login</a>
+                <a class="nav-item nav-link" href="{{ url_for('users.register') }}">Register</a>
+                {% endif %}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown04" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">Contact Me</a>
