--- a/flaskblog/templates/login.html
+++ b/flaskblog/templates/login.html
@@ -1,4 +1,4 @@
-<!-- {% extends 'layout.html' %}
+{% extends 'layout.html' %}
 
 {% block content %}
 <div class='content-section text-white form-background'>
@@ -51,4 +51,4 @@
         Need An Account? <a class="ml-2 text-white" href="{{url_for('users.register')}}">Register</a>
     </small>
 </div>
-{% endblock content %} -->
+{% endblock content %}
