--- a/flaskblog/templates/post.html
+++ b/flaskblog/templates/post.html
@@ -1,4 +1,4 @@
-<!-- {% extends 'layout.html' %}
+{% extends 'layout.html' %}
 
 {% block content %}
 <div>
@@ -41,4 +41,4 @@
         </div>
     </div>
 </div>
-{% endblock content %} -->
+{% endblock content %}
