updating city text

--- a/flaskblog/templates/home.html
+++ b/flaskblog/templates/home.html
@@ -43,13 +43,13 @@
             <div>
                 <h4 class="city-name">Portland</h4>
             </div>
-            <p class="mb-0">Portland is another city I'd be interested in relocating to. The environment is similarly appealing like Seattle, but Portland seems to have a more laid back attitude that's definitely appealing.</p>
+            <p class="mb-0">I'd be interested in relocating to Portland. The environment is appealing like Seattle, but Portland seems to have a more laid back attitude that I would enjoy.</p>
         </div>
         <div class="p-4 mb-2 rounded city-box text-white">
             <div>
                 <h4 class="city-name">Denver</h4>
             </div>
-            <p class="mb-0">While I was growing up I always wanted to move to Denver. It's where my father is from so I've spent a lot of time there and I know I would love living there. Go Broncos.</p>
+            <p class="mb-0">While I was growing up I always wanted to move to Denver. It's where my father is from so I've spent a lot of time there and I know I would love living there. Go Broncos!</p>
         </div>
     </aside><!-- /.blog-sidebar -->
 
