changing welcome text to white

--- a/flaskblog/templates/home.html
+++ b/flaskblog/templates/home.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <br>
-<h1 class="display-3 green-text">Welcome!</h1>
+<h1 class="display-3 text-white">Welcome!</h1>
 <br>
 <br>
 <div class="row">
